--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
       </section>
 
-      <form name="consultation" method="POST" data-netlify="true" netlify>
+      <form name="consultation" method="POST" data-netlify="true">
         <input type="hidden" name="form-name" value="consultation" />
 
         <h2>Schedule a Consultation</h2>
