--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
           </div>
           <div class="bio-photo">
-            <img src="patrick_graduation.jpg" alt="Photo of Patrick Oh" />
+            <img src="IMG_4320.JPEG" alt="Photo of Patrick Oh" />
           </div>
         </div>
       </section>
